--- a/themes.yaml
+++ b/themes.yaml
@@ -19,9 +19,11 @@ skynet:
   state-icon-active-color: 'var(--primary-color)'
   state-icon-unavailable-color: 'rgba(var(--primary-color), 0.6)'
   state-active-color: 'var(--primary-color)'
+  state-inactive-color: 'rgba(var(--primary-color), 0.6)'
   state-media_player-active-color: 'var(--primary-color)'
   state-input_boolean-off-color: 'var(--disabled-text-color)'
-  paper-item-icon-active-color: '#FFFFFF'
+  paper-item-icon-color: 'var(--primary-color)' #'#556' for home map
+  paper-item-icon-active-color: 'white'
 
   # Material Design icons
   mdc-theme-secondary: 'var(--accent-color)'
