--- a/scripts.yaml
+++ b/scripts.yaml
@@ -65,6 +65,9 @@ home_welcome:
       - action: scene.turn_on
         target: # ELIF evening - sun-based
           entity_id: scene.lights_dinner
+  - action: light.turn_on
+    target:
+      entity_id: light.wardrobe
 home_leave:
   alias: Leave Home
   icon: 'mdi:exit-run'
