--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -34,6 +34,10 @@ elements:
     style:
       top: 66%
       left: 83%
+    entity: sensor.outlet_desk_1_power
+    style:
+      top: 88.3%
+      left: 83%
   - type: state-icon # Pioneer
     entity: media_player.pioneer
     icon: mdi:audio-video
