--- a/dashboards/picture_home_map.yaml
+++ b/dashboards/picture_home_map.yaml
@@ -34,10 +34,16 @@ elements:
     style:
       top: 66%
       left: 83%
+  - type: state-label
     entity: sensor.outlet_desk_1_power
     style:
       top: 88.3%
       left: 83%
+  - type: state-label
+    entity: sensor.outlet_subwoofer_power
+    style:
+      top: 83.2%
+      left: 85.7%
   - type: state-icon # Pioneer
     entity: media_player.pioneer
     icon: mdi:audio-video
