--- a/configuration/template.yaml
+++ b/configuration/template.yaml
@@ -98,7 +98,7 @@
   - name: "PC is active"
     unique_id: "pc_is_active"
     state: >
-      {{ states('sensor.pc_cpuload') != 'unavailable' }}
+      {{ states('sensor.pc_cpuload') != 'unavailable' and (now() - states.sensor.pc_cpuload.last_changed).total_seconds() < 300 }}
      # {{ states('sensor.pc_kamil_active_ratio') | float(0) > 0 }}
   #      - name: "Shower"
   #        icon: "mdi:shower-head"
