--- a/entities/lights.yaml
+++ b/entities/lights.yaml
@@ -1,5 +1,5 @@
 - light.hall_rail_entrance
-- light.kitchen_spot
+- light.kitchen_spots
 - light.kitchen_countertop
 - light.living_room_table
 - light.living_room_sofa
