--- a/scenes/scenes_lights.yaml
+++ b/scenes/scenes_lights.yaml
@@ -2,9 +2,9 @@
   name: Lights On
   icon: mdi:lightbulb-multiple
   entities:
-    light.hall_rail_entrance:
+    light.hall_entrance:
       state: 'on'
-    light.kitchen_spot:
+    light.kitchen_spots:
       state: 'on'
     switch.outlet_kitchen_hood:
       state: 'on'
@@ -39,7 +39,7 @@
     light.kitchen_countertop:
       state: 'on'
       brightness: 220
-    light.kitchen_spot:
+    light.kitchen_spots:
       state: 'on'
       brightness: 150
       color_temp_kelvin: 3500
@@ -69,17 +69,13 @@
     light.balcony_bamboo:
       state: 'on'
       brightness: 40
-    light.balcony_ceiling:
-      state: 'on'
-      brightness: 80
-      color_temp_kelvin: 3500
     switch.outlet_kitchen_hood:
       state: 'on'
 - id: 'yaml_lights_cooking'
   name: Cooking
   icon: 'mdi:chef-hat'
   entities:
-    light.kitchen_spot:
+    light.kitchen_spots:
       state: 'on'
       brightness: 60
       color_temp_kelvin: 3000
@@ -104,7 +100,7 @@
   name: Dinner
   icon: 'mdi:silverware'
   entities:
-    light.kitchen_spot:
+    light.kitchen_spots:
       state: 'on'
       brightness: 30
       color_temp_kelvin: 2500
@@ -143,9 +139,9 @@
   name: Evening
   icon: 'mdi:clock-time-eleven-outline'
   entities:
-    light.hall_rail_entrance:
+    light.hall_entrance:
       state: 'off'
-    light.kitchen_spot:
+    light.kitchen_spots:
       state: 'on'
       brightness: 10
       color_temp_kelvin: 2000
