--- a/dashboards/view_home_mobile.yaml
+++ b/dashboards/view_home_mobile.yaml
@@ -15,7 +15,7 @@ badges:
   name: Home
   display_type: complete
 - type: entity
-  entity: light.hall_rail_entrance
+  entity: light.hall_entrance
   display_type: complete
   show_entity_picture: false
   name: Hall
