--- a/dashboards/view_lights_mobile.yaml
+++ b/dashboards/view_lights_mobile.yaml
@@ -28,7 +28,7 @@ cards:
           title: Hall Kitchen
           image: /api/image/serve/849624b1f3cb3365cea051cb32129aad/512x512
           entities:
-            - entity: light.hall_rail_entrance
+            - entity: light.hall_entrance
             - entity: light.kitchen_countertop
           tap_action:
             action: navigate
