--- a/dashboards/view_sun_energy.yaml
+++ b/dashboards/view_sun_energy.yaml
@@ -4,6 +4,11 @@ icon: "mdi:solar-power"
 badges: []
 type: sidebar
 cards:
+- type: tile
+  entity: cover.curtains
+  features:
+    - type: cover-open-close
+    - type: cover-position
 - !include "card_hstack_energy_co2.yaml"
 - type: horizontal-stack
   title: Sun light
