Update ESP32 fan control

--- a/configuration/fan.yaml
+++ b/configuration/fan.yaml
@@ -3,30 +3,32 @@
     audio_cabinet:
       friendly_name: "Audio Cabinet Fan"
       value_template: "{{ states('light.outlet_audio_cabinet_fan') }}"
-      percentage_template: "{{ state_attr('fan.esphome_web_e03714_fan_speed', 'percentage') if is_state('light.outlet_audio_cabinet_fan', 'on') else 0 }}"
+      percentage_template: "{{ state_attr('fan.esp3_fan_speed', 'percentage') if (is_state('light.outlet_audio_cabinet_fan', 'on') and state_attr('fan.esp3_fan_speed', 'percentage') is not none) else 0 }}"
       turn_on:
       - action: light.turn_on
         target:
           entity_id: light.outlet_audio_cabinet_fan
       - action: fan.turn_on
         target:
-          entity_id: fan.esphome_web_e03714_fan_speed
+          entity_id: fan.esp3_fan_speed
       turn_off:
       - action: light.turn_off
         target:
           entity_id: light.outlet_audio_cabinet_fan
       - action: fan.turn_off
         target:
-          entity_id: fan.esphome_web_e03714_fan_speed
+          entity_id: fan.esp3_fan_speed
       set_percentage:
-      - action: "{{ 'light.turn_off' if(percentage == 0) else 'light.turn_on' }}"
-        target:
-          entity_id: light.outlet_audio_cabinet_fan
-      - action: fan.set_percentage
-        target:
-          entity_id: fan.esphome_web_e03714_fan_speed
-        data:
-          percentage: "{{ percentage }}"
+      - if: "{{ percentage is not none }}"
+        then:
+        - action: "{{ 'light.turn_off' if(percentage == 0) else 'light.turn_on' }}"
+          target:
+            entity_id: light.outlet_audio_cabinet_fan
+        - action: fan.set_percentage
+          target:
+            entity_id: fan.esp3_fan_speed
+          data:
+            percentage: "{{ percentage }}"
       preset_modes:
         - 'Manual'
         - 'Auto'
