--- a/dashboards/view_home_desktop.yaml
+++ b/dashboards/view_home_desktop.yaml
@@ -52,11 +52,8 @@ cards:
     cards:
       - !include 'card_grid_media.yaml'
       - !include 'card_hstack_scenes.yaml'
-      - type: tile
-        entity: cover.curtains
-        features:
-          - type: cover-open-close
-          - type: cover-position
+      - !include 'card_curtains_simple.yaml'
+      - !include 'card_curtains_detailed.yaml'
       - initial_view: dayGridDay
         type: calendar
         entities:
